package ru.jlexender.se.labstory.actionInterfaces;

import ru.jlexender.se.labstory.basicClasses.Place;

public interface IGoingTo {
    public void isGoingTo(Place place);
}

