package ru.jlexender.se.labstory.actionInterfaces;

import ru.jlexender.se.labstory.basicClasses.Item;

public interface IHold {
    public void hold(Item item);
}
