package ru.jlexender.se.labstory.actionInterfaces;

import ru.jlexender.se.labstory.basicClasses.Human;

public interface IInterrupt {
    public void interrupt(Human human);
    public void interrupt();
}
