package ru.jlexender.se.labstory.actionInterfaces;

public interface IJumpUp {
    public void jumpUp();
}
