package ru.jlexender.se.labstory.actionInterfaces;

import ru.jlexender.se.labstory.basicClasses.Place;

public interface ILive {
    public void live(Place place);
}
