package ru.jlexender.se.labstory.actionInterfaces;

import ru.jlexender.se.labstory.basicClasses.Place;

public interface ISit {
    public void sit(Place place);
    public void sit();
}
