package ru.jlexender.se.labstory.actionInterfaces;

import ru.jlexender.se.labstory.basicClasses.Human;

public interface ITell {
    public void tell(Human human);
    public void tell(Human human, String phrase);
}
