package ru.jlexender.se.labstory.actionInterfaces;

public interface IThink {
    public void think(String content);
}

