package ru.jlexender.se.labstory.actionInterfaces;

public interface IWantToSay {
    public void wantToSay(String phrase);
}

