package ru.jlexender.se.labstory.classesList.Liquid;

import ru.jlexender.se.labstory.basicClasses.Liquid;

public class Juice extends Liquid {
    public Juice() {
        super("juice");
    }
}
