package ru.jlexender.se.labstory.classesList.Place;

import ru.jlexender.se.labstory.basicClasses.Place;

public final class FilleHome extends Place {

    public FilleHome() {
        super("Fille's home");
    }
    
}

