package ru.jlexender.se.labstory.classesList.Place;

import ru.jlexender.se.labstory.basicClasses.Place;

public final class RulleHome extends Place {
    public RulleHome() {
        super("Rulle's home");
    }
    
}

