package ru.jlexender.se.labstory.interfaces;

public interface IFood {}
