package ru.jlexender.se.labstory.utilityInterfaces;

@FunctionalInterface
public interface IExecute {
    public void execute();
}
