package ru.jlexender.se.labstory.utilityInterfaces;

public interface INamed {
    public String getName();
}
